Added test coverage 86%