@@ -1,30 +1,32 @@
 package com.jobsearch.controller;
 
 import com.jobsearch.model.Job;
+import com.jobsearch.service.JobScraperService;
 import com.jobsearch.service.JobService;
-import com.jobsearch.security.JwtAuthFilter;
-import com.jobsearch.security.UserDetailsServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.*;
-import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.web.servlet.MockMvc;
-import java.util.Arrays;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.http.ResponseEntity;
 
-@WebMvcTest(JobController.class)
+import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+@ExtendWith(MockitoExtension.class)
 class JobControllerTest {
 
-    @Autowired private MockMvc mockMvc;
-    @MockBean private JobService jobService;
-    @MockBean private JwtAuthFilter jwtAuthFilter;
-    @MockBean private UserDetailsServiceImpl userDetailsService;
+    @Mock private JobService jobService;
+    @Mock private JobScraperService jobScraperService;
+
+    @InjectMocks private JobController jobController;
 
     private Job testJob;
 
@@ -44,32 +46,75 @@ class JobControllerTest {
     }
 
     @Test
-    @WithMockUser
-    void getAllJobs_Returns200() throws Exception {
-        Page<Job> page = new PageImpl<>(Arrays.asList(testJob));
-        when(jobService.getAllJobs(anyInt(), anyInt())).thenReturn(page);
+    void getAllJobs_ReturnsOkWithPage() {
+        Page<Job> page = new PageImpl<>(List.of(testJob));
+        when(jobService.getAllJobs(0, 12)).thenReturn(page);
 
-        mockMvc.perform(get("/api/jobs?page=0&size=12"))
-            .andExpect(status().isOk());
+        ResponseEntity<Page<Job>> response = jobController.getAllJobs(0, 12);
+
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals(page, response.getBody());
     }
 
     @Test
-    @WithMockUser
-    void searchJobs_Returns200() throws Exception {
-        Page<Job> page = new PageImpl<>(Arrays.asList(testJob));
-        when(jobService.searchJobs(anyString(), anyInt(), anyInt())).thenReturn(page);
+    void searchJobs_ReturnsOkWithPage() {
+        Page<Job> page = new PageImpl<>(List.of(testJob));
+        when(jobService.searchJobs("java", 0, 12)).thenReturn(page);
 
-        mockMvc.perform(get("/api/jobs/search?keyword=java&page=0&size=12"))
-            .andExpect(status().isOk());
+        ResponseEntity<Page<Job>> response = jobController.searchJobs("java", 0, 12);
+
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals(page, response.getBody());
     }
 
     @Test
-    @WithMockUser
-    void filterByType_Returns200() throws Exception {
-        Page<Job> page = new PageImpl<>(Arrays.asList(testJob));
-        when(jobService.getJobsByType(anyString(), anyInt(), anyInt())).thenReturn(page);
+    void filterByType_ReturnsOkWithPage() {
+        Page<Job> page = new PageImpl<>(List.of(testJob));
+        when(jobService.getJobsByType("FULL_TIME", 0, 12)).thenReturn(page);
 
-        mockMvc.perform(get("/api/jobs/filter/type?jobType=FULL_TIME&page=0&size=12"))
-            .andExpect(status().isOk());
+        ResponseEntity<Page<Job>> response = jobController.getByType("FULL_TIME", 0, 12);
+
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals(page, response.getBody());
+    }
+
+    @Test
+    void getByExperience_ReturnsOkWithPage() {
+        Page<Job> page = new PageImpl<>(List.of(testJob));
+        when(jobService.getJobsByExperience("SENIOR", 0, 12)).thenReturn(page);
+
+        ResponseEntity<Page<Job>> response = jobController.getByExperience("SENIOR", 0, 12);
+
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals(page, response.getBody());
+    }
+
+    @Test
+    void getJobById_ReturnsOkWithJob() {
+        when(jobService.getJobById(1L)).thenReturn(testJob);
+
+        ResponseEntity<Job> response = jobController.getJobById(1L);
+
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals(testJob, response.getBody());
+    }
+
+    @Test
+    void loadSampleJobs_ReturnsSuccessMessage() {
+        ResponseEntity<String> response = jobController.loadSampleJobs();
+
+        verify(jobService).createSampleJobs();
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals("Sample jobs loaded successfully!", response.getBody());
+    }
+
+    @Test
+    void triggerScrape_ReturnsSuccessMessage() {
+        ResponseEntity<String> response = jobController.triggerScrape();
+
+        verify(jobScraperService).scrapeByKeyword("Java Developer");
+        verify(jobScraperService).scrapeByKeyword("Spring Boot Developer");
+        assertEquals(200, response.getStatusCode().value());
+        assertEquals("Scraping started! Check logs for results.", response.getBody());
     }
 }
